--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -39,4 +39,5 @@ skill-mode-title1: "&4战斗模式"
 skill-mode-subtitle1: "&a可释放技能"
 skill-mode-title2: "&a和平模式"
 skill-mode-subtitle2: "&c不可释放技能"
-skill-mode-key: "KEY_R"
+egg-sound: "ENTITY_ENDERDRAGON_AMBIENT"
+noskill-sound: "ENTITY_EVOCATION_ILLAGER_CAST_SPELL"
