增加升级提示功能

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -48,3 +48,11 @@ no-in-world:
   - "zz"
   - "fb3"
 SendMessage: "§a你不能在这个世界右键或者左键展示框,或者右键盔甲架"
+#升级提示功能
+前缀内容: "§7§l[§a等级系统§7§l] §b§l"
+升级内容: " §e§l炁源 + 1！ §d§l"
+降级内容: " §e§l炁源 - 1！ §d§l"
+等级中间的内容: " §a➟ §d§l"
+降级音乐: "降级"
+升级音乐: "升级"
+分割线: "§m#DB822116-FFFFFF00-DB822116                                               "
