就是变更了一堆

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,10 +1,13 @@
 成长型武器名: "§b§l⚝§d§l樱龙剑§b§l⚝"
 龙剑伤害信息: "§7[§c系统§7] §e樱龙剑激活 §c体术攻击+"
+#等级加成倍数
+xlevel: "1"
 #死亡信息世界名
 world:
   - "fb3"
 #掉级信息
 message: '&d&l异梦结束 炁散百一'
+炁散百分之几: 1
 #岩浆块造成的伤害
 magma: 0
 #仙人掌造成的伤害
@@ -50,9 +53,10 @@ no-in-world:
 SendMessage: "§a你不能在这个世界右键或者左键展示框,或者右键盔甲架"
 #升级提示功能
 前缀内容: "§7§l[§a等级系统§7§l] §b§l"
-升级内容: " §e§l炁源 + 1！ §d§l"
-降级内容: " §e§l炁源 - 1！ §d§l"
-等级中间的内容: " §a➟ §d§l"
+升级内容: " §e§l炁源 §7|§a+§7| §d§l"
+升级中间的内容: " §a➟ §d§l"
+降级内容: " §e§l炁源 §7|§c-§7| §d§l"
+降级中间的内容: " §c➟ §d§l"
 降级音乐: "降级"
 升级音乐: "升级"
 分割线: "§m#DB822116-FFFFFF00-DB822116                                               "
