更新禁用附魔台

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -101,3 +101,6 @@ join: "玩家 %player% 进入服务器"
 quit: "玩家 %player% 离开服务器"
 在线玩家: "#在线玩家"
 查询: "#查询"
+附魔信息: "§4| §c当前已禁止附魔台的使用"
+禁用附魔: true
+禁用放入附魔台: true
