--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -109,6 +109,16 @@ qq-list: false
 # 是否开启玩家炁源币查询
 qq-money: false
 查询: "#查询"
+查询消息: "炁源币：%vault_eco_balance_fixed%"
+# 是否开启服务器开启提示
+启动提醒: true
+启动消息: "服务器已开启 请各位前去游玩"
+# 是否开启服务器关闭提示
+关闭提醒: true
+关闭消息: "服务器已关闭 请等待开启"
+# 是否开启帮助
+qq-help: true
+帮助消息: "#官网 #地图 #百科 #查询 #在线玩家"
 附魔信息: "§4| §c当前已禁止附魔台的使用"
 禁用附魔: true
 禁用放入附魔台: true
